# mate-session-manager

./: .gitmodules  README  autogen.sh  configure.ac
capplet/: Makefile.am  gsm-app-dialog.c  gsm-app-dialog.h  gsm-properties-dialog.c  gsm-properties-dialog.h  gsp-app-manager.c  gsp-app-manager.h  gsp-app.c  gsp-app.h  gsp-keyfile.c  gsp-keyfile.h  main.c
data/: Makefile.am  detail.ui  gsm-inhibit-dialog.ui  org.mate.session.gresource.xml  properties.ui
mate-session/: gs-idle-monitor.c  gs-idle-monitor.h  gsm-app.c  gsm-app.h  gsm-autostart-app.c  gsm-autostart-app.h  gsm-client.c  gsm-client.h  gsm-consolekit.c  gsm-consolekit.h  gsm-dbus-client.c  gsm-dbus-client.h  gsm-inhibit-dialog.c  gsm-inhibit-dialog.h  gsm-inhibitor.c  gsm-inhibitor.h  gsm-logout-dialog.c  gsm-logout-dialog.h  gsm-manager.c  gsm-manager.h  gsm-presence.c  gsm-presence.h  gsm-session-save.c  gsm-session-save.h  gsm-store.c  gsm-store.h  gsm-systemd.c  gsm-systemd.h  gsm-util.c  gsm-util.h  gsm-xsmp-client.c  gsm-xsmp-client.h  gsm-xsmp-server.c  gsm-xsmp-server.h  main.c  mdm-log.c  mdm-log.h  mdm-signal-handler.c  mdm-signal-handler.h  mdm.c  (+5 more)
po/: POTFILES.in
tools/: mate-session-check-accelerated-gl-helper.c  mate-session-check-accelerated-gles-helper.c  mate-session-check-accelerated.c  mate-session-inhibit.c  mate-session-save.c
